<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LoL Videos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="info_favorito_anyadido">Video añadido a tus favoritos!</string>
    <string name="info_favorito_existente">Este video ya está en tus favoritos</string>
    <string name="info_favorito_borrado">Video borrado de tus favoritos</string>
    <string name="info_favorito_nohay">No tiene ningún video añadido a favoritos!</string>

    <string name="vota_el_video">Puntua el video!</string>
    <string name="title_top">Los videos mejor valorados!</string>

    <string name="info_share_download_video">Descargando para compartir...</string>
    <string name="info_share_upload_video">Publicando video...</string>
    <string name="info_share_selecciona">Seleccione dónde compartir el video</string>
    <string name="info_share_share">Compartir con...</string>
    <string name="info_share_app">Te recomiendo la aplicación LoL Videos! Gratis en Google Play Store http://play.google.com/store/apps/details?id=com.tywors.lolvideos</string>

    <string name="info_random_conectado">Mostrando videos aleatorios.</string>
    <string name="info_random_desconectado">Modo aleatorio desconectado.</string>

    <string name="info_upload_subir">Seleccione el video que desea publicar</string>
    <string name="proximamente">Próximamente</string>
    <string name="info_upload_finish">El video será publicado una vez revisado</string>

    <string name="info_exit">Salir</string>
    <string name="info_exit_2">¿Estás seguro?</string>

    <string name="info_gracias">Muchas gracias, seguiremos mejorando</string>
    <string name="info_colabora">Colabora publicando videos divertidos</string>


    <!-- menu  -->
    <string name="nav_1">Mis Videos</string>
    <string name="nav_2">Ganancias</string>
    <string name="share_app">Compartir app</string>


    <!-- registro -->
    <string name="reg_error_0">Nombre de usuario no disponible, elija otro.</string>
    <string name="reg_error_1">Este email ya está registrado.</string>
    <string name="reg_error_2">Error al subir la imagen, inténtelo de nuevo más tarde.</string>
    <string name="reg_error_3">Este dispositivo ya está registrado, intente una recuperación.</string>

    <string name="reg_error_10">Registrado con éxito, ya puede entar en su panel.</string>

    <string name="reg_error_4">Escriba un usuario de más de 4 carácteres.</string>
    <string name="reg_error_5">Escriba un email válido.</string>
    <string name="reg_error_6">Debe seleccionar una imagen.</string>

    <string name="info_registrate">Regístrate en LoLVideos para tener tu gestor de vídeos, controlar las visitas y compartir de una manera más facil.</string>



    <!-- MY videos -->
    <string name="visitas">Visitas </string>
    <string name="visitas_unicas">Visitas únicas</string>
    <string name="faboritos">Favoritos</string>

    <string name="activo">Activo</string>
    <string name="alaespera">Esperando aprovación</string>
    <string name="rechazado">Rechazado</string>

    <string name="myvideos_visitastotales">Visitas</string>
    <string name="myvideos_visitasunicastotales">Visitas únicas</string>
    <string name="myvideos_videostotales">Vídeos</string>

    <string name="footer_myvideos_listview_1">Eliminar videos rechazados</string>

    <string name="cambiar_la_imagen">Elija la imagen para sustituir</string>

    <string name="subir_video">Subir Video</string>

    <string name="votar">votar</string>
    <string name="fail_votar">Debe seleccionar alguna estrella</string>

    <string name="rateme">Puntúanos</string>
    <string name="votos">Votos</string>


    <!-- ganancias -->
    <string name="lista_pagos">Lista de pagos</string>
    <string name="visitas_unicas_disp">Visitas únicas disponibles:</string>
    <string name="inserte_btc">Escriba su dirección Bitcoin:</string>
    <string name="bt_pagos">Cobrar</string>
    <string name="dialog_pago_minimo">Es necesario un mínimo de 5.000 visítas unicas para convertirlo en Bitcoins</string>
    <string name="dialog_dir_invalida">Debe introducir una dirección de cobro bitcoin válida</string>
    <string name="dialog_btc_error">Error en la petición, inténtelo más tarde.</string>
    <string name="dialog_btc_asegurese">Confirme que la direccion Bitcoin es correcta antes de enviar la petición</string>
    <string name="dialog_btc_exito">Perfecto! recivirá sus Bitcoin en un plazo de 24horas</string>
    <string name="btc_para_cobrar">Bitcoins para cobrar:</string>
    <string name="btc_pago_pendiente">\u231B</string>
    <string name="btc_pago_realizado">\u2611</string>
    <string name="btc_pago_error">\u26A0</string>
    <string name="btc_total_app">Bitcoins pagados en total: </string>
    <string name="title_activity_tips">Tips</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
